--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon Restaurant is a family owned and catered for
+      family restaurant. We believe in authenticity and serve the same."
     />
+    <meta name="og:title" content="Little Lemon Restaurant"/>
+    <meta name="og:description" content="Family Owned Authentic Italian Restaurant"/>
+    <meta name="og:image" content=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
